# Text-based-RPG-Game

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ideas.txt  main.cpp  manual  story.txt
UnitTesting/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cpp
classFiles/: Archer.cpp  Archer.h  CMakeLists.txt  Characters.cpp  Characters.h  Companion.cpp  Companion.h  Enemy.cpp  Enemy.h  Makefile  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h  cmake_install.cmake
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
